--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         class="navbar__logo"
       />
 
-      <a href="#">
+      <a href="https://github.com/ishandeveloper/Coursify-hacktoberfest">
         <h4><i class="fab fa-github"></i></h4
       ></a>
     </nav>
