feat: filter courses by tag

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./courses/data.js"></script>
+    <script src="./helpers.js"></script>
     <script src="./main.js"></script>
   </body>
 </html>
