--- a/index.html
+++ b/index.html
@@ -1,63 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Coursify | A curated list of best free tech courses on the planet
-    </title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
-    />
-    <link rel="stylesheet" href="./assets/main.css" />
-  </head>
-  <body>
-    <!-- Navbar -->
-    <nav class="main__navbar">
-      <img
-        src="./assets/images/coursify-notag.png"
-        alt="Coursify x Hacktoberfest Logo"
-        class="navbar__logo"
-      />
 
-      <a href="https://github.com/ishandeveloper/Coursify-hacktoberfest">
-        <h4><i class="fab fa-github"></i></h4
-      ></a>
-    </nav>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>
+		Coursify | A curated list of best free tech courses on the planet
+	</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" />
+	<link rel="stylesheet" href="./assets/main.css" />
+</head>
 
-    <!-- Hero Section -->
+<body>
+	<!-- Navbar -->
+	<nav class="main__navbar">
+		<img src="./assets/images/coursify-notag.png" alt="Coursify x Hacktoberfest Logo" class="navbar__logo" />
 
-    <section class="hero__wrapper">
-      <div class="hero__title">
-        <h3>A curated list of best free learning resources on the planet.</h3>
-        <h5>
-          Curated with <i class="fas fa-heart"></i> by the open-source
-          community.
-        </h5>
-      </div>
+		<a href="https://github.com/ishandeveloper/Coursify-hacktoberfest">
+			<h4><i class="fab fa-github"></i></h4>
+		</a>
+	</nav>
 
-      <img
-        src="./assets/images/backdrop.png"
-        alt="Hacktoberfest Logo"
-        class="hero__image"
-      />
-    </section>
+	<!-- Hero Section -->
 
-    <!-- Courses Section-->
+	<section class="hero__wrapper">
+		<div class="hero__title">
+			<h3>A curated list of best free learning resources on the planet.</h3>
+			<h5>
+				Curated with <i class="fas fa-heart"></i> by the open-source
+				community.
+			</h5>
+		</div>
 
-    <section class="courses__wrapper">
-      <div class="courses__list">
-        
-      </div>
-    </section>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.js"
-      integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-      crossorigin="anonymous"
-    ></script>
-    <script src="./courses/data.js"></script>
-    <script src="./helpers.js"></script>
-    <script src="./main.js"></script>
-  </body>
+		<img src="./assets/images/backdrop.png" alt="Hacktoberfest Logo" class="hero__image" />
+	</section>
+
+	<!-- Courses Section-->
+
+	<section class="courses__wrapper">
+		<div class="courses__list">
+
+		</div>
+
+		<div class="pagination"></div>
+	</section>
+	<script src="https://code.jquery.com/jquery-3.4.1.js"
+		integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+	<script src="./courses/data.js"></script>
+	<script src="./helpers.js"></script>
+	<script src="./main.js"></script>
+</body>
+
 </html>
