--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
     </section>
 
     <!-- Courses Section-->
+    <!-- search bar  -->
+    <section class="search-courses">
+      <h2 style="font-size: 35px;">Search course </h2>
+      <form class="search-form">
+        <input  class="search-bar" name="search-bar" type="text" placeholder="  course name "/>
+      </form>
+    </section>
 
     <section class="courses__wrapper">
       <div class="courses__list">
@@ -59,5 +66,6 @@
     <script src="./courses/data.js"></script>
     <script src="./helpers.js"></script>
     <script src="./main.js"></script>
+    <script src="./search.js"></script>
   </body>
 </html>
