--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
     />
     <link rel="stylesheet" href="./assets/main.css" />
+    <link rel = "icon" href="./assets/images/Icon.png/" />
   </head>
   <body>
     <!-- Navbar -->
