Homepage Link addition
Added the anchor tag around the navbar-logo, and added a class "github" to "Contribute on GitHub" anchor tag in the navbar in order to maintain the layout.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
 	<!-- Navbar -->
 	<nav class="main__navbar">
-		<img src="./assets/images/coursify-notag.png" alt="Coursify x Hacktoberfest Logo" class="navbar__logo" />
-
-		<a href="https://github.com/ishandeveloper/Coursify-hacktoberfest">
+	<a href="/"><img src="./assets/images/coursify-notag.png" alt="Coursify x Hacktoberfest Logo" class="navbar__logo" />
+	</a>	
+		<a class="github" href="https://github.com/ishandeveloper/Coursify-hacktoberfest">
 			<h4><i class="fab fa-github"></i></h4>
 		</a>
 	</nav>
