--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="icon" type="image/jpg" href="assets/logo_size.jpg">
 	<title>
 		Coursify | A curated list of best free tech courses on the planet
 	</title>
@@ -14,7 +15,8 @@
 <body>
 	<!-- Navbar -->
 	<nav class="main__navbar">
-		<img src="./assets/images/coursify-notag.png" alt="Coursify x Hacktoberfest Logo" class="navbar__logo" />
+		<img src="./assets/images/coursify-notag.png" alt="Coursify x Hacktoberfest Logo" class="navbar__logo"
+			onclick="location.href='https://coursify.ishandeveloper.com'" />
 
 		<a href="https://github.com/ishandeveloper/Coursify-hacktoberfest">
 			<h4><i class="fab fa-github"></i></h4>
