Add homepage link to the navbar logo

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <body>
 	<!-- Navbar -->
 	<nav class="main__navbar">
-		<img src="./assets/images/coursify-notag.png" alt="Coursify x Hacktoberfest Logo" class="navbar__logo" />
-
-		<a href="https://github.com/ishandeveloper/Coursify-hacktoberfest">
+		<a href="https://coursify.ishandeveloper.com/" aria-label="Coursify">
+			<img src="./assets/images/coursify-notag.png" alt="Coursify x Hacktoberfest Logo" class="navbar__logo"/>
+		</a>
+		<a href="https://github.com/ishandeveloper/Coursify-hacktoberfest" class="main-navbar__link">
 			<h4><i class="fab fa-github"></i></h4>
 		</a>
 	</nav>
